# libjimmy-cpp-types

./: CMakeLists.txt  README.md
include/libjimmy/: types.hpp
include/libjimmy/types/: array.hpp  binary.hpp  bool.hpp  character.hpp  file_template.hpp  float.hpp  int.hpp  object.hpp  ordered_object.hpp  sequence.hpp  string.hpp  string_file.hpp  string_template.hpp  uint.hpp  unicode.hpp  xml.hpp
tests/: CMakeLists.txt  array_test.cpp  binary_test.cpp  bool_test.cpp  character_test.cpp  float_test.cpp  int_test.cpp  object_test.cpp  ordered_object_test.cpp  sequence_test.cpp  string_test.cpp  stringfile_test.cpp  types_test.cpp  uint_test.cpp  unicode_test.cpp  xml_test.cpp
tests/resources/: stringfile_test1.txt
